@@ -362,6 +362,7 @@ Dinu Gherman
 Jonathan Giddy
 Johannes Gijsbers
 Michael Gilfix
+Julian Gindi
 Wim Glenn
 Christoph Gohlke
 Tim Golden
